--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,9 @@
 name: CI
 
-on: [push, pull_request]
+on:
+    push:
+        branches:
+            - qaac
 
 jobs:
     build:
@@ -14,7 +17,7 @@ jobs:
             - name: Checkout
               uses: actions/checkout@v3
             - name: Add MSBuild to PATH
-              uses: microsoft/setup-msbuild@v1.3.1
+              uses: microsoft/setup-msbuild@v2
             - name: Build
               run: |
                   MSBuild.exe vcproject/qaac.sln /m /p:Configuration=Release /p:Platform=${{ matrix.platform }}
